tests/src/frontend/typechecking/invalid/abstract_type_const4.sk
base class Obj {
  type Tid: Test.MixedScalar;
}

base class Foo {
  type TObj: Obj;
  type Tid = this::TObj::Tid;
}
